# factplusplus

./: Makefile  build-with-java.sh
FaCT++/: Makefile
FaCT++.C/: fact.cpp  fact.h
FaCT++.HFact/: README.md  hfact.cabal
FaCT++.HFact/src/: HFact.hs
FaCT++.HFact/src/HFact/C/: Types.hs
FaCT++.HFact/test/: Main.hs
Kernel/: Makefile
